--- a/app/src/main/res/drawable/right_foreground.xml
+++ b/app/src/main/res/drawable/right_foreground.xml
@@ -3,7 +3,7 @@
     android:height="108dp"
     android:viewportWidth="133.48164"
     android:viewportHeight="133.48164"
-    android:tint="#000000">
+    android:tint="#CD0F3D4C">
   <group android:translateX="54.74082"
       android:translateY="54.74082">
       <path
