--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        android:background="#ffffff"
+        android:background="#a5cfdd"
+        android:textColor="#CD0F3D4C"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +28,9 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="15dp"
-        android:background="#ffffff"
+        android:background="#a5cfdd"
+        android:textColor="#CD0F3D4C"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tVAmount" />
@@ -56,7 +60,7 @@
                 android:id="@+id/sFilterBy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#000000" />
+                android:backgroundTint="#CD0F3D4C" />
         </LinearLayout>
     </LinearLayout>
 
@@ -89,8 +93,8 @@
             android:id="@+id/tVDatum"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="1dp"
             android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
             android:background="#ffffff"
@@ -136,14 +140,14 @@
 
             <Spinner
                 android:id="@+id/sSortBy"
-                android:layout_width="match_parent"
 
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="1dp"
-                android:backgroundTint="#000000" />
+                android:backgroundTint="#CD0F3D4C" />
         </LinearLayout>
     </LinearLayout>
 
@@ -177,10 +181,17 @@
 
     <Button
         android:id="@+id/bDodajTransakciju"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="110dp"
+        android:layout_marginEnd="110dp"
         android:layout_marginBottom="15dp"
-
+        android:background="#310F3D4C"
+        android:clickable="true"
+        android:text="@string/add_transaction"
+        android:textAlignment="center"
+        android:textColor="#E90F3D4C"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
