Add transaction, Save - djelimicno !

--- a/app/src/main/res/layout/transaction_view.xml
+++ b/app/src/main/res/layout/transaction_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#a5cfdd">
@@ -332,7 +333,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="1dp"
                     android:background="#a5cfdd"
-                    android:text="Amount"
+                    android:text="@string/amount"
                     android:textSize="10sp"
                     android:textStyle="bold" />
 
@@ -356,15 +357,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/ll12" >
 
                 <TextView
+                    android:id="@+id/iznosTransakcije"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="1dp"
                     android:layout_weight="1"
                     android:background="#ffffff"
-                    android:textSize="26sp" />
+                    android:textSize="26sp"
+                     />
 
                 <TextView
-                    android:id="@+id/iznosTransakcije"
+                    android:id="@+id/UkupniIznosTransakcije"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
