--- a/app/src/main/res/layout/pocetna.xml
+++ b/app/src/main/res/layout/pocetna.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#a5cfdd"
-    tools:context=".MainActivity">
+    tools:context=".activities.PocetnaAktivnost">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#a5cfdd"
+    tools:context=".activities.PocetnaAktivnost">
 
     <TextView
         android:id="@+id/tVAmount"
@@ -197,3 +204,4 @@
 
     </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
