--- a/app/src/main/res/layout/pocetna.xml
+++ b/app/src/main/res/layout/pocetna.xml
@@ -15,20 +15,25 @@
     tools:context=".activities.PocetnaAktivnost">
 
     <TextView
+        android:text="Bugdet: "
+        android:textStyle="bold"
         android:id="@+id/tVAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="15dp"
         android:background="#a5cfdd"
         android:textColor="#CD0F3D4C"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:text="Month limit: "
+        android:textStyle="bold"
         android:id="@+id/tVLimit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
