dodavanje, brisanje, ažuriranje

--- a/app/src/main/res/layout/lista_transakcija.xml
+++ b/app/src/main/res/layout/lista_transakcija.xml
@@ -34,5 +34,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/offlineMode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="8sp"/>
     </LinearLayout>
 </LinearLayout>
