--- a/app/src/main/res/layout/detalji_transakcije.xml
+++ b/app/src/main/res/layout/detalji_transakcije.xml
@@ -10,19 +10,32 @@
         android:layout_height="match_parent"
         android:background="#a5cfdd">
 
+        <TextView
+            android:id="@+id/offMode"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="30dp"
+            android:textSize="10dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <LinearLayout
             android:id="@+id/ll"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="30dp"
             android:background="#8FA5CFDD"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/offMode" >
 
             <TextView
                 android:id="@+id/title"
